--- a/modules/logging-client-lib/package.json
+++ b/modules/logging-client-lib/package.json
@@ -41,7 +41,8 @@
   },
   "dependencies": {
     "commander": "^8.3.0",
-    "dotenv": "^10.0.0"
+    "dotenv": "^10.0.0",
+    "winston": "^3.3.3"
   },
   "devDependencies": {
     "@types/dotenv": "^8.2.0",
