Add ElasticSearch 8.x support for Logging.

--- a/modules/logging-client-lib/package.json
+++ b/modules/logging-client-lib/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mojaloop/logging-bc-logging-client-lib",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "description": "mojaloop logging client lib",
   "license": "Apache-2.0",
   "homepage": "https://github.com/mojaloop/logging-bc/tree/main/modules/logging-svc",
@@ -32,6 +32,7 @@
     "lint": "yarn run build && npx eslint ./src",
     "lint:fix": "yarn run build && npx eslint ./src --fix",
     "test:unit": "jest --passWithNoTests --testMatch '**/test/unit/**/*.test.ts'",
+    "test:integration": "jest --passWithNoTests --testMatch '**/test/integration/**/*.test.ts'",
     "test:coverage": "jest --passWithNoTests --coverage --coverageThreshold='{}' --testMatch '**/test/unit/**/*.test.ts'",
     "test:coverage-check": "jest --coverage --testMatch '**/test/unit/**/*.test.ts'",
     "audit:resolve": "SHELL=sh resolve-audit",
@@ -40,10 +41,12 @@
     "dep:update": "yarn run ncu -u"
   },
   "dependencies": {
-    "@mojaloop/logging-bc-logging-types-lib": "^0.0.1",
+    "@mojaloop/logging-bc-logging-types-lib": "^0.0.2",
+    "@mojaloop/platform-shared-lib-nodejs-kafka-client-lib": "^0.0.4",
     "winston": "^3.3.3"
   },
   "devDependencies": {
+    "@mojaloop/platform-shared-lib-messaging-types-lib": "^0.0.2",
     "@types/jest": "^27.0.3",
     "@types/node": "^16.11.9",
     "@types/node-cache": "^4.2.5",
