--- a/modules/logging-svc/package.json
+++ b/modules/logging-svc/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mojaloop/logging-bc-logging-svc",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "mojaloop logging service",
   "license": "Apache-2.0",
   "homepage": "https://github.com/mojaloop/logging-bc/tree/main/modules/logging-svc",
@@ -8,7 +8,8 @@
     "url": "https://github.com/mojaloop/logging-bc/issues#readme"
   },
   "contributors": [
-    "Miguel de Barros <miguel.debarros@modusbox.com>"
+    "Miguel de Barros <miguel.debarros@modusbox.com>",
+    "Jason Bruwer <jason.bruwer@coil.com>"
   ],
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
@@ -32,6 +33,7 @@
     "lint": "yarn run build && npx eslint ./src",
     "lint:fix": "yarn run build && npx eslint ./src --fix",
     "test:unit": "jest --passWithNoTests --testMatch '**/test/unit/**/*.test.ts'",
+    "test:integration": "jest --passWithNoTests --testMatch '**/test/integration/**/*.test.ts'",
     "test:coverage": "jest --passWithNoTests --coverage --coverageThreshold='{}' --testMatch '**/test/unit/**/*.test.ts'",
     "test:coverage-check": "jest --coverage --testMatch '**/test/unit/**/*.test.ts'",
     "audit:resolve": "SHELL=sh resolve-audit",
@@ -40,11 +42,17 @@
     "dep:update": "yarn run ncu -u"
   },
   "dependencies": {
+    "@elastic/elasticsearch": "^8.1.0",
+    "@mojaloop/logging-bc-logging-client-lib": "^0.0.6",
+    "@mojaloop/logging-bc-logging-types-lib": "^0.0.2",
+    "@mojaloop/platform-shared-lib-nodejs-kafka-client-lib": "^0.0.4",
     "commander": "^8.3.0",
     "dotenv": "^10.0.0"
   },
   "devDependencies": {
-    "@mojaloop/platform-shared-lib-messaging-types-lib": "^0.0.1",
+    "@elastic/elasticsearch": "^8.1.0",
+    "@mojaloop/logging-bc-logging-client-lib": "^0.0.6",
+    "@mojaloop/platform-shared-lib-messaging-types-lib": "^0.0.2",
     "@types/dotenv": "^8.2.0",
     "@types/jest": "^27.0.3",
     "@types/node": "^16.11.9",
