--- a/modules/client-lib/package.json
+++ b/modules/client-lib/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@mojaloop/logging-bc-logging-client-lib",
-  "version": "0.0.6",
+  "name": "@mojaloop/logging-bc-client-lib",
+  "version": "0.0.9",
   "description": "mojaloop logging client lib",
   "license": "Apache-2.0",
   "homepage": "https://github.com/mojaloop/logging-bc/tree/main/modules/logging-svc",
@@ -8,7 +8,9 @@
     "url": "https://github.com/mojaloop/logging-bc/issues#readme"
   },
   "contributors": [
-    "Miguel de Barros <miguel.debarros@modusbox.com>"
+    "Miguel de Barros <miguel.debarros@modusbox.com>",
+    "Jason Bruwer <jason.bruwer@coil.com>",
+    "Pedro Sousa Barreto <pedrosousabarreto@gmail.com>"
   ],
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
@@ -35,38 +37,23 @@
     "test:integration": "jest --passWithNoTests --testMatch '**/test/integration/**/*.test.ts'",
     "test:coverage": "jest --passWithNoTests --coverage --coverageThreshold='{}' --testMatch '**/test/unit/**/*.test.ts'",
     "test:coverage-check": "jest --coverage --testMatch '**/test/unit/**/*.test.ts'",
-    "audit:resolve": "SHELL=sh resolve-audit",
-    "audit:check": "SHELL=sh check-audit",
-    "dep:check": "yarn run ncu -e 2",
-    "dep:update": "yarn run ncu -u"
+    "audit:check": "yarn npm audit",
+    "dep:check": "ncu -e 2",
+    "dep:update": "ncu -u",
+    "publish": "yarn run build && yarn version patch && yarn npm publish --tag=latest --access public"
   },
   "dependencies": {
-    "@mojaloop/logging-bc-logging-types-lib": "^0.0.2",
+    "@mojaloop/logging-bc-public-types-lib": "workspace:*",
     "@mojaloop/platform-shared-lib-nodejs-kafka-client-lib": "^0.0.4",
     "winston": "^3.3.3"
   },
   "devDependencies": {
     "@mojaloop/platform-shared-lib-messaging-types-lib": "^0.0.2",
-    "@types/jest": "^27.0.3",
-    "@types/node": "^16.11.9",
-    "@types/node-cache": "^4.2.5",
-    "@typescript-eslint/eslint-plugin": "^5.4.0",
-    "eslint": "^8.3.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-config-standard-with-typescript": "^21.0.1",
-    "eslint-plugin-import": "^2.25.3",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^5.1.1",
-    "eslint-plugin-standard": "^5.0.0",
-    "faucet": "0.0.1",
+    "eslint": "^8.14.0",
+    "husky": "^7.0.4",
     "jest": "^27.3.1",
-    "jest-junit": "^13.0.0",
-    "npm-audit-resolver": "^2.3.1",
-    "npm-check-updates": "^12.0.2",
-    "nyc": "^15.1.0",
-    "pre-commit": "^1.2.2",
+    "npm-check-updates": "^12.5.11",
     "ts-jest": "^27.0.7",
-    "typedoc": "^0.22.9",
-    "typescript": "^4.5.0"
+    "typescript": "^4.6.4"
   }
 }
