--- a/modules/client-lib/package.json
+++ b/modules/client-lib/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mojaloop/logging-bc-client-lib",
-  "version": "0.0.9",
+  "version": "0.0.10",
   "description": "mojaloop logging client lib",
   "license": "Apache-2.0",
   "homepage": "https://github.com/mojaloop/logging-bc/tree/main/modules/logging-svc",
@@ -24,11 +24,11 @@
     "test:unit"
   ],
   "scripts": {
-    "start": "yarn run service",
-    "service": "tsc && node dist/index.js --config ../../.env",
+    "start": "node dist/application/index.js",
     "build": "tsc",
     "watch": "tsc -w",
     "clean": "rm -Rf dist",
+    "prestart": "yarn run build",
     "pretest": "yarn run build",
     "standard": "yarn run lint",
     "lint": "yarn run build && npx eslint ./src",
@@ -44,11 +44,11 @@
   },
   "dependencies": {
     "@mojaloop/logging-bc-public-types-lib": "workspace:*",
-    "@mojaloop/platform-shared-lib-nodejs-kafka-client-lib": "^0.0.4",
+    "@mojaloop/platform-shared-lib-nodejs-kafka-client-lib": "^0.0.8",
     "winston": "^3.3.3"
   },
   "devDependencies": {
-    "@mojaloop/platform-shared-lib-messaging-types-lib": "^0.0.2",
+    "@mojaloop/platform-shared-lib-messaging-types-lib": "^0.0.3",
     "eslint": "^8.14.0",
     "husky": "^7.0.4",
     "jest": "^27.3.1",
