--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,7 +21,7 @@ jobs:
       - save_cache:
           paths:
             - node_modules
-          key: dependency-cache-{{ .Environment.CIRCLE_SHA1 }}
+          key: dependency-cache-{{ checksum "yarn.lock" }}
       - persist_to_workspace:
           root: *workingDirVar
           paths:
@@ -33,7 +33,14 @@ jobs:
           at: *workingDirVar
       - restore_cache:
           keys:
-            - dependency-cache-{{ .Environment.CIRCLE_SHA1 }}
+            - dependency-cache-{{ checksum "yarn.lock" }}
       - run:
           name: Execute unit tests
           command: yarn test:unit
+
+workflows:
+  version: 2
+  build_and_test:
+    jobs:
+      - build
+      - test-unit
