--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -43,4 +43,7 @@ workflows:
   build_and_test:
     jobs:
       - build
-      - test-unit
+      - test-unit:
+          requires:
+            - build
+
