--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,11 +13,12 @@ executors:
       - image: node:16.13
 
 jobs:
-  build:
+  setup_and_build:
     executor: default-docker
     steps:
       - checkout
       - run: yarn install
+      - run: yarn build
       - save_cache:
           paths:
             - .
@@ -42,8 +43,8 @@ workflows:
   version: 2
   build_and_test:
     jobs:
-      - build
+      - setup_and_build
       - test-unit:
           requires:
-            - build
+            - setup_and_build
 
