--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,16 +13,31 @@ executors:
       - image: node:16.13
 
 jobs:
-  setup_and_build:
+  setup:
     executor: default-docker
     steps:
       - checkout
       - run: yarn install
-      - run: yarn build
       - save_cache:
           paths:
+            - node_modules
+          key: node_modules-cache-{{ checksum "yarn.lock" }}
+      - persist_to_workspace:
+          root: *workingDirVar
+          paths:
             - .
-          key: dependency-cache-{{ checksum "yarn.lock" }}
+  build:
+    executor: default-docker
+    steps:
+      - attach_workspace:
+          at: *workingDirVar
+      - restore_cache:
+          keys:
+            - node_modules-cache-{{ checksum "yarn.lock" }}
+      - save_cache:
+          paths:
+            - modules
+          key: build-cache-{{ .Environment.CIRCLE_SHA1 }}
       - persist_to_workspace:
           root: *workingDirVar
           paths:
@@ -35,6 +50,7 @@ jobs:
       - restore_cache:
           keys:
             - dependency-cache-{{ checksum "yarn.lock" }}
+            - build-cache-{{ .Environment.CIRCLE_SHA1 }}
       - run:
           name: Execute unit tests
           command: yarn test:unit
@@ -43,8 +59,11 @@ workflows:
   version: 2
   build_and_test:
     jobs:
-      - setup_and_build
+      - setup
+      - build:
+          requires:
+            - setup
       - test-unit:
           requires:
-            - setup_and_build
+            - build
 
