--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,6 +34,7 @@ jobs:
       - restore_cache:
           keys:
             - node_modules-cache-{{ checksum "yarn.lock" }}
+      - run: yarn build
       - save_cache:
           paths:
             - modules
