--- a/modules/logging-svc/package.json
+++ b/modules/logging-svc/package.json
@@ -42,7 +42,7 @@
   },
   "dependencies": {
     "@elastic/elasticsearch": "^8.1.0",
-    "@mojaloop/logging-bc-public-types-lib": "workspace:*",
+    "@mojaloop/logging-bc-public-types-lib": "*",
     "@mojaloop/platform-shared-lib-nodejs-kafka-client-lib": "^0.0.8"
   },
   "devDependencies": {
