--- a/modules/client-lib/package.json
+++ b/modules/client-lib/package.json
@@ -43,7 +43,7 @@
     "publish": "yarn run build && yarn version patch && yarn npm publish --tag=latest --access public"
   },
   "dependencies": {
-    "@mojaloop/logging-bc-public-types-lib": "workspace:*",
+    "@mojaloop/logging-bc-public-types-lib": "*",
     "@mojaloop/platform-shared-lib-nodejs-kafka-client-lib": "^0.0.8",
     "winston": "^3.3.3"
   },
