--- a/package.json
+++ b/package.json
@@ -15,25 +15,25 @@
   ],
   "scripts": {
     "prepare": "husky install",
-    "start:logging-svc": "yarn workspace @mojaloop/logging-bc-logging-svc run start",
-    "build": "yarn workspaces foreach -v run build",
-    "watch": "yarn workspaces foreach --parallel -v run watch",
-    "clean": "yarn run clean:dist && yarn run clean:npm",
-    "clean:npm": "yarn workspaces foreach -v run clean:npm",
-    "clean:dist": "yarn workspaces foreach -v run clean:dist",
+    "start:logging-svc": "npm -w @mojaloop/logging-bc-logging-svc run start",
+    "build": "npm -ws run build",
+    "watch": "npm -ws --parallel -v run watch",
+    "clean": "yarn run clean:dist",
+    "clean:npm": "rm -Rf node_modules && npm -ws run clean:npm",
+    "clean:dist": "npm -ws run clean:dist",
     "pretest": "echo 'FIX ME'",
     "standard": "yarn run --no-progress --stream lint'",
-    "lint": "yarn workspaces foreach -v run lint",
-    "lint:fix": "yarn workspaces foreach -v run lint:fix",
-    "test:unit": "yarn workspaces foreach -v run test:unit",
-    "test:coverage": "yarn workspaces foreach --parallel -v run test:coverage",
-    "test:coverage-check": "yarn workspaces foreach --parallel -v run test:coverage-check",
-    "test:integration": "yarn workspaces foreach --parallel -v run test:integration",
-    "audit:check": "yarn workspaces foreach --parallel -v run audit:check",
-    "dep:check": "yarn workspaces foreach --parallel -v run dep:check",
-    "dep:update": "yarn workspaces foreach --parallel -v run dep:update",
-    "publish:public-types": "yarn workspace @mojaloop/logging-bc-public-types-lib run publish",
-    "publish:client-lib": "yarn workspace @mojaloop/logging-bc-client-lib run publish"
+    "lint": "npm -ws run lint",
+    "lint:fix": "npm -ws run lint:fix",
+    "test:unit": "npm -ws run test:unit",
+    "test:coverage": "npm -ws --parallel -v run test:coverage",
+    "test:coverage-check": "npm -ws --parallel -v run test:coverage-check",
+    "test:integration": "npm -ws --parallel -v run test:integration",
+    "audit:check": "npm -ws --parallel -v run audit:check",
+    "dep:check": "npm -ws --parallel -v run dep:check",
+    "dep:update": "npm -ws --parallel -v run dep:update",
+    "publish:public-types": "npm -w @mojaloop/logging-bc-public-types-lib run publish",
+    "publish:client-lib": "npm -w @mojaloop/logging-bc-client-lib run publish"
   },
   "devDependencies": {
     "@types/jest": "^27.0.3",
@@ -49,10 +49,9 @@
     "typescript": "^4.6.4"
   },
   "workspaces": [
+    "modules/public-types-lib",
+    "modules/client-lib",
+    "modules/logging-svc",
     "modules/*"
-  ],
-  "packageManager": "yarn@3.2.0",
-  "engines": {
-    "yarn": "3.2.0"
-  }
+  ]
 }
