--- a/modules/client-lib/package.json
+++ b/modules/client-lib/package.json
@@ -28,19 +28,19 @@
     "build": "tsc",
     "watch": "tsc -w",
     "clean": "rm -Rf dist",
-    "prestart": "yarn run build",
-    "pretest": "yarn run build",
-    "standard": "yarn run lint",
-    "lint": "yarn run build && npx eslint ./src",
-    "lint:fix": "yarn run build && npx eslint ./src --fix",
+    "prestart": "npm run build",
+    "pretest": "npm run build",
+    "standard": "npm run lint",
+    "lint": "npm run build && npx eslint ./src",
+    "lint:fix": "npm run build && npx eslint ./src --fix",
     "test:unit": "jest --passWithNoTests --testMatch '**/test/unit/**/*.test.ts'",
     "test:integration": "jest --passWithNoTests --testMatch '**/test/integration/**/*.test.ts'",
     "test:coverage": "jest --passWithNoTests --coverage --coverageThreshold='{}' --testMatch '**/test/unit/**/*.test.ts'",
     "test:coverage-check": "jest --coverage --testMatch '**/test/unit/**/*.test.ts'",
-    "audit:check": "yarn npm audit",
+    "audit:check": "npm npm audit",
     "dep:check": "ncu -e 2",
     "dep:update": "ncu -u",
-    "publish": "yarn run build && yarn version patch && yarn npm publish --tag=latest --access public"
+    "publish": "npm run build && npm version patch && npm npm publish --tag=latest --access public"
   },
   "dependencies": {
     "@mojaloop/logging-bc-public-types-lib": "*",
