--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,12 +28,12 @@ jobs:
       - checkout
       - restore_cache:
           keys:
-            - node_modules-cache-{{ checksum "package.json" }}
-      - run: npm install
+            - node_modules-cache-{{ checksum "package-lock.json" }}
+      - run: npm ci
       - save_cache:
           paths:
             - node_modules
-          key: node_modules-cache-{{ checksum "package.json" }}
+          key: node_modules-cache-{{ checksum "package-lock.json" }}
       - persist_to_workspace:
           root: *workingDirVar
           paths:
@@ -45,7 +45,7 @@ jobs:
           at: *workingDirVar
       - restore_cache:
           keys:
-            - node_modules-cache-{{ checksum "package.json" }}
+            - node_modules-cache-{{ checksum "package-lock.json" }}
       - run: npm run lint
   build:
     executor: default-docker
@@ -54,7 +54,7 @@ jobs:
           at: *workingDirVar
       - restore_cache:
           keys:
-            - node_modules-cache-{{ checksum "package.json" }}
+            - node_modules-cache-{{ checksum "package-lock.json" }}
       - run: npm run build
       - save_cache:
           paths:
@@ -71,7 +71,7 @@ jobs:
           at: *workingDirVar
       - restore_cache:
           keys:
-            - node_modules-cache-{{ checksum "package.json" }}
+            - node_modules-cache-{{ checksum "package-lock.json" }}
             - build-cache-{{ .Environment.CIRCLE_SHA1 }}
       - run:
           name: Execute unit tests
@@ -83,7 +83,7 @@ jobs:
           at: *workingDirVar
       - restore_cache:
           keys:
-            - node_modules-cache-{{ checksum "package.json" }}
+            - node_modules-cache-{{ checksum "package-lock.json" }}
             - build-cache-{{ .Environment.CIRCLE_SHA1 }}
       - run: ls -la ./modules/logging-svc/dist/
       - run: echo "published!!!"
