--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -90,34 +90,34 @@ jobs:
           name: Authenticate with registry
           command: echo "//registry.npmjs.org/:_authToken=$NPM_TOKEN" > .npmrc
       - run:
-          name: Detect pubish targets
+          name: Detect and publish modules
           command: chmod +x .circleci/publish_immediate.sh && .circleci/publish_immediate.sh
 
-  publish:
-    executor: default-docker
-    steps:
-      - checkout
-      - restore_cache:
-          keys:
-            - build-cache-{{ .Environment.CIRCLE_SHA1 }}
-      - run:
-          name: Authenticate with registry
-          command: echo "//registry.npmjs.org/:_authToken=$NPM_TOKEN" > .npmrc
-      - run: cat .npmrc
-      - run: ls -la ./modules/logging-svc/dist/
-      - run: echo "published!!!"
-
-  trigger-publish-workflows:
-    executor: default-docker
-    steps:
-      - attach_workspace:
-          at: *workingDirVar
-      - restore_cache:
-          keys:
-            - build-cache-{{ .Environment.CIRCLE_SHA1 }}
-      - run:
-          name: Trigger publish workflow
-          command: chmod +x .circleci/publish.sh && .circleci/publish.sh
+#  publish:
+#    executor: default-docker
+#    steps:
+#      - checkout
+#      - restore_cache:
+#          keys:
+#            - build-cache-{{ .Environment.CIRCLE_SHA1 }}
+#      - run:
+#          name: Authenticate with registry
+#          command: echo "//registry.npmjs.org/:_authToken=$NPM_TOKEN" > .npmrc
+#      - run: cat .npmrc
+#      - run: ls -la ./modules/logging-svc/dist/
+#      - run: echo "published!!!"
+#
+#  trigger-publish-workflows:
+#    executor: default-docker
+#    steps:
+#      - attach_workspace:
+#          at: *workingDirVar
+#      - restore_cache:
+#          keys:
+#            - build-cache-{{ .Environment.CIRCLE_SHA1 }}
+#      - run:
+#          name: Trigger publish workflow
+#          command: chmod +x .circleci/publish.sh && .circleci/publish.sh
 
 workflows:
   version: 2
@@ -148,9 +148,9 @@ workflows:
 #          context: org-global
 #          requires:
 #            - test-unit
-  publish:
-    when: << pipeline.parameters.publish >>
-    jobs:
-      - publish:
-          context: org-global
-
+#  publish:
+#    when: << pipeline.parameters.publish >>
+#    jobs:
+#      - publish:
+#          context: org-global
+#
