--- a/modules/client-lib/package.json
+++ b/modules/client-lib/package.json
@@ -40,7 +40,7 @@
     "audit:check": "npm npm audit",
     "dep:check": "ncu -e 2",
     "dep:update": "ncu -u",
-    "publish": "npm run build && npm version patch && npm npm publish --tag=latest --access public"
+    "publish": "npm version patch && npm publish --tag=latest --access public"
   },
   "dependencies": {
     "@mojaloop/logging-bc-public-types-lib": "*",
@@ -57,4 +57,3 @@
     "typescript": "^4.6.4"
   }
 }
-
