--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -90,6 +90,7 @@ jobs:
           name: Authenticate with registry
           command: echo "//registry.npmjs.org/:_authToken=$NPM_TOKEN" > ~/.npmrc
       - run: cat ~/.npmrc
+      - run: npm config set registry https://registry.npmjs.org/
 #      - env:
 #          NPM_TOKEN={{ .Environment.CIRCLE_SHA1 }}
       - run:
