--- a/modules/client-lib/package.json
+++ b/modules/client-lib/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mojaloop/logging-bc-client-lib",
-  "version": "0.0.10",
+  "version": "0.1.0",
   "description": "mojaloop logging client lib 6",
   "license": "Apache-2.0",
   "homepage": "https://github.com/mojaloop/logging-bc/tree/main/modules/logging-svc",
@@ -40,7 +40,7 @@
     "audit:check": "npm npm audit",
     "dep:check": "ncu -e 2",
     "dep:update": "ncu -u",
-    "publish": "npm version patch && npm publish --tag=latest --access public"
+    "npm_publish": "npm version patch && npm publish --tag=latest --access public"
   },
   "dependencies": {
     "@mojaloop/logging-bc-public-types-lib": "*",
