--- a/modules/public-types-lib/package.json
+++ b/modules/public-types-lib/package.json
@@ -39,7 +39,7 @@
     "audit:check": "npm npm audit",
     "dep:check": "ncu -e 2",
     "dep:update": "ncu -u",
-    "publish": "npm run build && npm version patch && npm npm publish --tag=latest --access public"
+    "npm_publish": "npm version patch && npm publish --tag=latest --access public"
   },
   "devDependencies": {
     "eslint": "^8.14.0",
