--- a/modules/client-lib/package.json
+++ b/modules/client-lib/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@mojaloop/logging-bc-client-lib",
   "version": "0.1.1",
-  "description": "mojaloop logging client lib 6",
+  "description": "mojaloop logging client lib",
   "license": "Apache-2.0",
   "homepage": "https://github.com/mojaloop/logging-bc/tree/main/modules/logging-svc",
   "bugs": {
@@ -43,7 +43,7 @@
     "npm_publish": "npm version patch && npm publish --tag=latest --access public"
   },
   "dependencies": {
-    "@mojaloop/logging-bc-public-types-lib": "*",
+    "@mojaloop/logging-bc-public-types-lib": "~0.1.0",
     "@mojaloop/platform-shared-lib-nodejs-kafka-client-lib": "^0.0.8",
     "winston": "^3.3.3"
   },
