--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,7 +19,7 @@ version: 2.1
 defaults_configure_git: &defaults_configure_git
   name: Configure git
   command: |
-    ssh-keyscan github.com >> ~/.ssh/known_hosts
+    ssh-keyscan github.com > ~/.ssh/known_hosts
     git config user.email ${GIT_CI_EMAIL}
     git config user.name ${GIT_CI_USER}
 
