--- a/modules/public-types-lib/package.json
+++ b/modules/public-types-lib/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@mojaloop/logging-bc-public-types-lib",
   "version": "0.1.7",
-  "description": "Mojaloop logging bounded context public types lib ",
+  "description": "Mojaloop logging bounded context public types lib (test change 1)",
   "license": "Apache-2.0",
   "homepage": "https://github.com/mojaloop/logging-bc/tree/main/modules/public-types-lib",
   "bugs": {
