--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -93,6 +93,8 @@ jobs:
       - run:
           name: Execute unit tests
           command: npm run test:unit
+      - store_artifacts:
+          path: coverage
 
   publish_npm:
     executor: default-docker
