minor package-json cleanups

--- a/modules/client-lib/package.json
+++ b/modules/client-lib/package.json
@@ -17,12 +17,7 @@
   "files": [
     "/dist"
   ],
-  "pre-commit": [
-    "dep:check",
-    "build",
-    "lint",
-    "test:unit"
-  ],
+
   "scripts": {
     "start": "node dist/application/index.js",
     "build": "tsc",
@@ -31,8 +26,8 @@
     "prestart": "npm run build",
     "pretest": "npm run build",
     "standard": "npm run lint",
-    "lint": "npm run build && npx eslint ./src",
-    "lint:fix": "npm run build && npx eslint ./src --fix",
+    "lint": "npx eslint ./src",
+    "lint:fix": "eslint ./src --fix",
     "test:unit": "jest --passWithNoTests --testMatch '**/test/unit/**/*.test.ts'",
     "test:integration": "jest --passWithNoTests --testMatch '**/test/integration/**/*.test.ts'",
     "test:coverage": "jest --passWithNoTests --coverage --coverageThreshold='{}' --testMatch '**/test/unit/**/*.test.ts'",
