--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
     "clean:dist": "npm -ws run clean:dist",
     "pretest": "echo 'FIX ME'",
     "standard": "yarn run --no-progress --stream lint'",
-    "lint": "npm -ws run lint",
-    "lint:fix": "npm -ws run lint:fix",
+    "lint": "npm -ws -p run lint",
+    "lint:fix": "npm -ws -p run lint:fix",
     "test:unit": "npm -ws run test:unit",
     "test:coverage": "npm -ws --parallel -v run test:coverage",
     "test:coverage-check": "npm -ws --parallel -v run test:coverage-check",
@@ -39,8 +39,8 @@
     "@types/jest": "^27.0.3",
     "@types/node": "^16.11.9",
     "@types/node-cache": "^4.2.5",
-    "@typescript-eslint/eslint-plugin": "^5.22.0",
-    "@typescript-eslint/parser": "^5.22.0",
+    "@typescript-eslint/eslint-plugin": "^5.36.1",
+    "@typescript-eslint/parser": "^5.36.1",
     "eslint": "^8.14.0",
     "husky": "^7.0.4",
     "jest": "^27.3.1",
